@@ -4,6 +4,7 @@ glibc (2.3.2.ds1-11) unstable; urgency=low
 
    - debian/control.in/s390x: Remove -dev dependency on gcc-3.2.
    - debian/sysdeps/s390.mk: Add missing )
+   - debian/rules: Fixes for cross-compiling
 
   * Phil Blundell <pb@debian.org>
 
